crates/haneul-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__checkpoint_subscription__subscription_sequential.snap
---
source: crates/haneul-indexer-alt-e2e-tests/tests/graphql_subscription/checkpoint_subscription.rs
expression: items
---
[
  {
    "data": {
      "checkpoints": {
        "sequenceNumber": 1
      }
    }
  },
  {
    "data": {
      "checkpoints": {
        "sequenceNumber": 2
      }
    }
  },
  {
    "data": {
      "checkpoints": {
        "sequenceNumber": 3
      }
    }
  }
]
