crates/haneul-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__checkpoint_subscription__subscription_transactions_pagination_first.snap
---
source: crates/haneul-indexer-alt-e2e-tests/tests/graphql_subscription/checkpoint_subscription.rs
expression: item
---
{
  "data": {
    "checkpoints": {
      "sequenceNumber": "[seq]",
      "transactions": {
        "nodes": [
          {
            "digest": "[digest]",
            "effects": {
              "status": "SUCCESS",
              "balanceChanges": {
                "nodes": [
                  {
                    "amount": "100",
                    "coinType": {
                      "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::haneul::HANEUL"
                    }
                  },
                  {
                    "amount": "-2976100",
                    "coinType": {
                      "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::haneul::HANEUL"
                    }
                  }
                ]
              }
            }
          }
        ],
        "edges": [
          {
            "cursor": "[cursor]"
          }
        ],
        "pageInfo": {
          "hasNextPage": true,
          "hasPreviousPage": false
        }
      }
    }
  }
}
